--- a/src/JsearchWindow.form
+++ b/src/JsearchWindow.form
@@ -125,7 +125,7 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;id&quot;, &quot;Book Name&quot; })" type="code"/>
+          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;id&quot;, &quot;Book_Name&quot; })" type="code"/>
         </Property>
       </Properties>
       <Events>
