--- a/src/JsearchWindow.form
+++ b/src/JsearchWindow.form
@@ -142,11 +142,13 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="6" rowCount="0">
+                <Column editable="false" title="id" type="java.lang.Object"/>
+                <Column editable="false" title="Book_Name" type="java.lang.Object"/>
+                <Column editable="false" title="Author_Name" type="java.lang.Object"/>
+                <Column editable="false" title="ISBN_Number" type="java.lang.Object"/>
+                <Column editable="false" title="Qunatity" type="java.lang.Object"/>
+                <Column editable="false" title="Available" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
