search by Name fixed

--- a/src/issueSearch.form
+++ b/src/issueSearch.form
@@ -108,7 +108,7 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;id&quot;, &quot;User_Name&quot; })" type="code"/>
+          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;id&quot;, &quot;Name&quot; })" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
